[package]
name = "chain-sdk-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.16"
ethereum-types = "0.12.0"
fixed-hash = "0.7.0"
futures = "0.3.16"
hyper = { version = "0.14.11", features = ["server"] }
impl-codec = "0.5.1"
impl-rlp = "0.3.0"
impl-serde = "0.3.1"
jsonrpc-core = "18.0.0"
log = "0.4.14"
pin-project = "1.0.8"
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
tokio = { version = "1", features = ["full"] }
url = "2.2.2"
